challenge 추가/수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -173,7 +173,7 @@ services:
 
   front-end:
     image: khs23/front-end-image:latest
-    container_name: front-end
+    container_name: front-end-container
     ports:
       - "9090:80"
     networks:
