--- a/back-end/user-service/src/main/resources/application.yml
+++ b/back-end/user-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     #import: optional:configserver:http://localhost:8888
     import: optional:configserver:http://config-server-container:8888
   profiles:
-    active: ${SPRING_PROFILES_ACTIVE:local}
+    active: ${SPRING_PROFILES_ACTIVE:docker}
 eureka:
   client:
     register-with-eureka: true
