front-image로 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -172,8 +172,8 @@ services:
       retries: 5
 
   front-end:
-    image: khs23/front-end-image:latest
-    container_name: front-end-container
+    image: khs23/front-image:latest
+    container_name: front-container
     ports:
       - "9090:80"
     networks:
