healthcheck의 start 시간 조정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       interval: 5s
       timeout: 3s
       retries: 5
+      start_period: 30s
     networks:
       - budgetmate-compose
     depends_on:
@@ -28,6 +29,7 @@ services:
       interval: 5s
       timeout: 3s
       retries: 5
+      start_period: 30s
     depends_on:
       eureka-server:
         condition: service_healthy
@@ -48,6 +50,7 @@ services:
       interval: 5s
       timeout: 3s
       retries: 5
+      start_period: 30s
     depends_on:
       eureka-server:
         condition: service_healthy
@@ -170,6 +173,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+      start_period: 30s
 
   front-end:
     image: khs23/front-image:latest
