eureka-server 컨테이너 이름 지정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   eureka-server:
     image: khs23/eureka-server-image:latest
+    container_name: eureka-server-container
     #build:
       #context: ./eureka-server
     ports:
