--- a/front-end/nginx/default.conf
+++ b/front-end/nginx/default.conf
@@ -1,11 +1,9 @@
-# nginx/default.conf
-
 server {
     listen 80;
     server_name localhost;
 
     root /usr/share/nginx/html;
-    index index.html index.htm;
+    index index.html;
 
     location / {
         try_files $uri /index.html;
