budgetmate-dns방식으로 수정

--- a/back-end/gateway/src/main/resources/application.yml
+++ b/back-end/gateway/src/main/resources/application.yml
@@ -125,7 +125,7 @@ eureka:
     fetch-registry: true
     service-url:
       #defaultZone: http://localhost:8761/eureka
-      defaultZone: http://eureka-server-container:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka
   instance:
     prefer-ip-address: true
 
