--- a/back-end/receipt-service/src/main/resources/application.yml
+++ b/back-end/receipt-service/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   config:
     #import: optional:configserver:http://localhost:8888
-    import: optional:configserver:http://config-server-container:8888
+    import: optional:configserver:http://config-server:8888
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:docker}  # 환경 변수나 기본값으로 local profile 사용
 
