--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -178,7 +178,7 @@ services:
       retries: 5
       start_period: 30s
 
-  front-end:
+  front:
     image: khs23/front-image:latest
     container_name: front-container
     ports:
