--- a/back-end/challenge-service/src/main/resources/application.yml
+++ b/back-end/challenge-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     #import: optional:configserver:http://localhost:8888
     import: optional:configserver:http://config-server:8888
   profiles:
-    active: ${SPRING_PROFILES_ACTIVE:docker}
+    active: ${SPRING_PROFILES_ACTIVE:challenge-docker}
 
 eureka:
   client:
