--- a/front-end/nginx/default.conf
+++ b/front-end/nginx/default.conf
@@ -15,31 +15,31 @@ server {
     }
 
     location /user/ {
-	proxy_pass http://gateway:8090/user;
+	proxy_pass http://gateway:8090/user/;
 	proxy_set_header Host $host;
 	proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /receipt/ {
-	proxy_pass http://gateway:8090/receipt;
+	proxy_pass http://gateway:8090/receipt/;
 	proxy_set_header Host $host;
 	proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /statis/ {
-	proxy_pass http://gateway:8090/statis;
+	proxy_pass http://gateway:8090/statis/;
 	proxy_set_header Host $host;
 	proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /history/ {
-	proxy_pass http://gateway:8090/history;
+	proxy_pass http://gateway:8090/history/;
 	proxy_set_header Host $host;
 	proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /challenge/ {
-    proxy_pass http://gateway:8090/challenge;
+    proxy_pass http://gateway:8090/challenge/;
 	proxy_set_header Host $host;
 	proxy_set_header X-Real-IP $remote_addr;
     }
