--- a/front-end/nginx/default.conf
+++ b/front-end/nginx/default.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location = /favicon.ico {
-        log_not_found off;
+    log_not_found off;
 	access_log off;
 	return 204;
     }
@@ -20,10 +20,40 @@ server {
 	proxy_set_header X-Real-IP $remote_addr;
     }
 
+    location /budget/ {
+    proxy_pass http://gateway:8090/receipt/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+        }
+
     location /receipt/ {
 	proxy_pass http://gateway:8090/receipt/;
 	proxy_set_header Host $host;
 	proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /api/images/upload {
+    proxy_pass http://gateway:8090/receipt/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /image/upload/images/ {
+    proxy_pass http://gateway:8090/receipt/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /receipt/image/upload {
+    proxy_pass http://gateway:8090/receipt/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+   }
+
+    location /receipt/image/ {
+    proxy_pass http://gateway:8090/receipt/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /statis/ {
@@ -43,6 +73,7 @@ server {
 	proxy_set_header Host $host;
 	proxy_set_header X-Real-IP $remote_addr;
     }
+
 
 }
 
