--- a/front-end/nginx/default.conf
+++ b/front-end/nginx/default.conf
@@ -32,7 +32,7 @@ server {
 	proxy_set_header X-Real-IP $remote_addr;
     }
 
-    location /api/images/upload {
+    location /api/images/upload/ {
     proxy_pass http://gateway:8090/receipt/;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
@@ -44,7 +44,7 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     }
 
-    location /receipt/image/upload {
+    location /receipt/image/upload/ {
     proxy_pass http://gateway:8090/receipt/;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
