default.conf경로 설정 수정

--- a/front-end/nginx/default.conf
+++ b/front-end/nginx/default.conf
@@ -21,7 +21,7 @@ server {
     }
 
     location /budget/ {
-    proxy_pass http://gateway:8090/receipt/;
+    proxy_pass http://gateway:8090/budget/;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
         }
@@ -33,25 +33,25 @@ server {
     }
 
     location /api/images/upload/ {
-    proxy_pass http://gateway:8090/receipt/;
+    proxy_pass http://gateway:8090/api/images/upload/;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /image/upload/images/ {
-    proxy_pass http://gateway:8090/receipt/;
+    proxy_pass http://gateway:8090/image/upload/images/;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /receipt/image/upload/ {
-    proxy_pass http://gateway:8090/receipt/;
+    proxy_pass http://gateway:8090/receipt/image/upload/;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
    }
 
     location /receipt/image/ {
-    proxy_pass http://gateway:8090/receipt/;
+    proxy_pass http://gateway:8090/receipt/image/;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     }
