config경로 /모두 삭제

--- a/front-end/nginx/default.conf
+++ b/front-end/nginx/default.conf
@@ -15,61 +15,61 @@ server {
     }
 
     location /user/ {
-	proxy_pass http://gateway:8090/user/;
+	proxy_pass http://gateway:8090;
 	proxy_set_header Host $host;
 	proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /budget/ {
-    proxy_pass http://gateway:8090/budget/;
+    proxy_pass http://gateway:8090;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
         }
 
     location /receipt/ {
-	proxy_pass http://gateway:8090/receipt/;
+	proxy_pass http://gateway:8090;
 	proxy_set_header Host $host;
 	proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /api/images/upload/ {
-    proxy_pass http://gateway:8090/api/images/upload/;
+    proxy_pass http://gateway:8090;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /image/upload/images/ {
-    proxy_pass http://gateway:8090/image/upload/images/;
+    proxy_pass http://gateway:8090;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /receipt/image/upload/ {
-    proxy_pass http://gateway:8090/receipt/image/upload/;
+    proxy_pass http://gateway:8090;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
    }
 
     location /receipt/image/ {
-    proxy_pass http://gateway:8090/receipt/image/;
+    proxy_pass http://gateway:8090;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /statis/ {
-	proxy_pass http://gateway:8090/statis/;
+	proxy_pass http://gateway:8090;
 	proxy_set_header Host $host;
 	proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /history/ {
-	proxy_pass http://gateway:8090/history/;
+	proxy_pass http://gateway:8090;
 	proxy_set_header Host $host;
 	proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /challenge/ {
-    proxy_pass http://gateway:8090/challenge/;
+    proxy_pass http://gateway:8090;
 	proxy_set_header Host $host;
 	proxy_set_header X-Real-IP $remote_addr;
     }
