gateway /budget경로 추가

--- a/back-end/gateway/src/main/resources/application.yml
+++ b/back-end/gateway/src/main/resources/application.yml
@@ -26,6 +26,7 @@ spring:
         - id: budget-api
           uri: lb://receipt-service
           predicates:
+            - Path=/budget
             - Path=/budget/**
           filters:
             - PreserveHostHeader
