--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,15 +20,17 @@
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
+    "jspdf": "^2.5.2",
     "jspdf-autotable": "^5.0.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.514.0",
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
