--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -2,7 +2,8 @@
 FROM node:18-alpine as builder
 WORKDIR /app
 
-# package 파일 복사 및 패키지 설치
+# ✅ .env 파일 포함
+COPY .env .env
 COPY package.json package-lock.json ./
 RUN npm install
 
@@ -13,4 +14,3 @@ RUN npm run build
 FROM nginx:alpine
 COPY --from=builder /app/dist /usr/share/nginx/html
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
-
