--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -3,7 +3,7 @@ FROM node:18-alpine as builder
 WORKDIR /app
 
 # ✅ .env 파일 포함
-COPY .env .env
+COPY .env 
 COPY package.json package-lock.json ./
 RUN npm install
 
