--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
+      GOOGLE_TOKEN: ${{ secrets.GOOGLE_TOKEN }}
     steps:
       - name: Checkout Source
         uses: actions/checkout@v3
